update to files

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webbeezwork-backend",
   "version": "1.0.0",
-  "description": "Backend API for Webbeezwork digital marketing agency contact form",
+  "description": "Backend API for Webbeezwork Webbeezwork Digital Marketing Agency contact form",
   "main": "src/app.js",
   "scripts": {
     "start": "node src/app.js",
