--- a/frontend/.env.production.example
+++ b/frontend/.env.production.example
@@ -9,7 +9,7 @@ VITE_APP_NAME=Webbeezwork
 VITE_APP_VERSION=1.0.0
 
 # Company Information
-VITE_COMPANY_NAME=Webbeezwork Digital Marketing Agency
+VITE_COMPANY_NAME=Webbeezwork Webbeezwork Digital Marketing Agency
 VITE_COMPANY_EMAIL=webbeezworkagency@gmail.com
 VITE_COMPANY_PHONE=+233 XX XXX XXXX
 VITE_COMPANY_WEBSITE=https://webbeezwork-pearl.vercel.app
